# stable-retro-apple-silicon

./: .gitignore  CHANGES.md  CMakeLists.txt  MANIFEST.in  PUBLISHING.md  README.md  pyproject.toml  setup.py
.github/workflows/: build-publish.yml  release.yml  test-cpp.yml
cores/gba/src/core/: config.c
retro/: __init__.py
src/: emulator.cpp  emulator.h
stable_retro/: VERSION.txt  __init__.py  rendering.py  retro_env.py  rosetta_snes.py
stable_retro/data/: __init__.py
tests/test_python/: test_env.py
tools/: rosetta_snes_helper.cpp
