[build-system]
requires = ["cmake>=3.2.0", "setuptools>=68", "wheel", "build"]

[tool.cibuildwheel]
build = "cp{39,310,311,312}-macosx_arm64"
build-verbosity = 1

[tool.cibuildwheel.macos]
archs = "arm64"
before-all = "brew install pkg-config lua@5.4 libzip"
environment = "MACOSX_DEPLOYMENT_TARGET=14.0 ARCHFLAGS='-arch arm64' CMAKE_ARGS='-DBUILD_CORES=gb;nes;snes;genesis -DBUILD_TESTS=OFF -DENABLE_CAPNPROTO=OFF' STABLE_RETRO_PUBLIC_CORES='gambatte,fceumm,snes9x,genesis_plus_gx'"
